--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 
   <!-- Fonts & Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -38,190 +39,97 @@
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
   <link rel="icon" type="image/png" href="/assets/favicon.png" />
 </head>
-<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
-
-  <!-- Logo -->
-  <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
-    <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
-  </header>
-
-  <!-- Navigation -->
-  <nav class="bg-armadilloBlack/95 rounded-full mb-6 w-full fade-in shadow-sm">
-    <div class="max-w-5xl mx-auto px-4">
-      <div class="flex justify-center gap-4 flex-wrap py-2">
-        <a href="/index.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
-        <a href="/services.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
-        <a href="/about.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
-        <a href="/contact.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter page-shell">
+  <div class="relative flex flex-col min-h-screen">
+    <header class="relative z-10 max-w-6xl mx-auto px-6 pt-8 fade-in">
+      <div class="glass-panel nav-shell bg-armadilloBlack/90 rounded-2xl px-5 sm:px-8 py-4 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
+        <div class="flex items-center gap-4">
+          <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="w-14 h-14" />
+          <div>
+            <p class="pill">About</p>
+            <p class="text-offWhite font-semibold text-lg">Veteran-owned. Mission-led.</p>
+            <p class="text-sm text-offWhite/80">Rooted in Austin, serving Texas</p>
+          </div>
+        </div>
+        <nav class="flex flex-wrap items-center gap-3 text-sm">
+          <a href="/index.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Home</a>
+          <a href="/services.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Services</a>
+          <a href="/about.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">About</a>
+          <a href="/contact.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Contact</a>
+          <a href="tel:19039331342" class="btn-primary text-sm">Call today</a>
+        </nav>
       </div>
-    </div>
-  </nav>
+    </header>
 
-  <!-- Page Title -->
-  <div class="text-center mb-8 fade-in">
-    <h1 class="text-4xl font-extrabold text-oliveGreen">About Iron Dillo Cybersecurity</h1>
+    <main class="flex-grow max-w-6xl mx-auto px-6 py-12 space-y-10 fade-in">
+      <section class="glass-panel rounded-3xl p-8 md:p-12 text-center space-y-4">
+        <h1 class="text-4xl font-extrabold text-armadilloBlack">About Iron Dillo Cybersecurity</h1>
+        <p class="text-lg text-armadilloGray leading-relaxed">Iron Dillo Cybersecurity is a veteran-owned business dedicated to protecting individuals, small businesses, and rural communities across Texas with practical, trustworthy cybersecurity solutions. Proudly Austin-based, we bring local commitment to every engagement.</p>
+      </section>
+
+      <section class="glass-panel rounded-3xl p-8 flex flex-col md:flex-row items-center gap-10">
+        <div class="w-52 h-52 md:w-60 md:h-60 flex-shrink-0">
+          <img src="/assets/Dilloman.jpg" alt="Kris McCoy" class="rounded-full object-cover w-full h-full shadow-md">
+        </div>
+        <div class="space-y-4">
+          <h2 class="text-2xl font-bold text-armadilloBlack">Meet Kris McCoy</h2>
+          <p class="text-armadilloGray leading-relaxed">As the owner of Iron Dillo, Kris brings military discipline, Texas grit, and years of hands-on security experience. Every client receives transparent communication, documented findings, and support that fits their mission.</p>
+          <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+            <div class="hero-accent rounded-2xl p-4">
+              <p class="text-sm font-semibold text-armadilloBlack">Veteran-led</p>
+              <p class="text-xs text-armadilloGray">Integrity and accountability in every engagement.</p>
+            </div>
+            <div class="hero-accent rounded-2xl p-4">
+              <p class="text-sm font-semibold text-armadilloBlack">Community focused</p>
+              <p class="text-xs text-armadilloGray">Protecting the businesses our neighbors rely on.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="glass-panel rounded-3xl p-8 space-y-4">
+        <div class="section-heading space-y-1">
+          <h2 class="text-2xl font-bold text-armadilloBlack">Our Commitments</h2>
+          <p class="text-sm text-armadilloGray">We stay anchored to values that keep clients protected and informed.</p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+          <div class="glass-panel rounded-2xl p-6">
+            <h3 class="font-semibold text-armadilloBlack mb-2">Clarity first</h3>
+            <p class="text-sm text-armadilloGray">No jargon. Every recommendation comes with rationale, ownership, and next steps.</p>
+          </div>
+          <div class="glass-panel rounded-2xl p-6">
+            <h3 class="font-semibold text-armadilloBlack mb-2">Secure by design</h3>
+            <p class="text-sm text-armadilloGray">Documentation, policies, and training built to withstand audits and real-world threats.</p>
+          </div>
+          <div class="glass-panel rounded-2xl p-6">
+            <h3 class="font-semibold text-armadilloBlack mb-2">People-centered</h3>
+            <p class="text-sm text-armadilloGray">We meet teams where they are and guide them through implementation without slowing the mission.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="relative z-10 bg-armadilloBlack text-offWhite py-10 mt-auto">
+      <div class="max-w-6xl mx-auto px-6 footer-grid">
+        <div>
+          <p class="text-oliveGreen font-semibold mb-2">Iron Dillo Cybersecurity</p>
+          <p class="text-sm text-offWhite/80">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
+        </div>
+        <div>
+          <p class="uppercase text-xs tracking-widest text-oliveGreen">Contact</p>
+          <a href="tel:19039331342" class="block text-offWhite font-semibold">(903) 933-1342</a>
+          <a href="mailto:contact@irondillo.com" class="text-offWhite/80 hover:text-oliveGreen">contact@irondillo.com</a>
+        </div>
+        <div class="text-sm text-offWhite/80 space-y-2">
+          <p class="uppercase text-xs tracking-widest text-oliveGreen">Quick links</p>
+          <div class="flex flex-col gap-1">
+            <a href="/privacy.html" class="hover:text-oliveGreen">Privacy</a>
+            <a href="/terms.html" class="hover:text-oliveGreen">Terms</a>
+            <a href="/commitment.html" class="hover:text-oliveGreen">Our Commitment</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
-
-  <!-- Main Content -->
-  <main class="flex-grow max-w-4xl mx-auto px-6 py-12 space-y-12 fade-in">
-
-    <!-- Intro -->
-    <section class="bg-white rounded-lg shadow-lg p-10 text-center">
-      <p class="text-armadilloBlack leading-relaxed text-lg">
-        Iron Dillo Cybersecurity is a veteran-owned business dedicated to protecting individuals,
-        small businesses, and rural communities across Texas with practical, trustworthy cybersecurity solutions.
-        Proudly Austin-based, we bring local commitment to every engagement.
-      </p>
-    </section>
-
-    <!-- Story -->
-    <section class="bg-white rounded-lg shadow-lg p-10 flex flex-col md:flex-row items-center gap-10">
-      <div class="w-48 h-48 md:w-56 md:h-56 flex-shrink-0">
-        <img src="/assets/Dilloman.jpg" alt="Kris McCoy" class="rounded-full object-cover w-full h-full shadow-md">
-      </div>
-      <div>
-        <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Meet Kris McCoy</h2>
-        <p class="text-armadilloBlack leading-relaxed mb-4">
-          I served in the U.S. Army in field artillery during Operation Enduring Freedom. After my service,
-          I earned a Master of Science in Cybersecurity with distinction and am continuing my education through
-          the WGU Business School. Today, I’m proud to be active in the Texas business community!
-        </p>
-        <p class="text-armadilloBlack leading-relaxed">
-          I am pursuing the CISSP to strengthen my ability to serve clients,
-          bringing the same discipline, vigilance, and integrity from my military service into every project.
-        </p>
-      </div>
-    </section>
-
-    <!-- Ethics Commitment -->
-    <section class="bg-white rounded-lg shadow-lg p-10">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Commitment to Professional Ethics</h2>
-      <p class="text-armadilloBlack leading-relaxed mb-4">
-        As a member of <span class="font-semibold">ISC2</span>, I keep their 
-        <a href="https://www.isc2.org/Ethics" target="_blank" class="text-oliveGreen hover:underline">Code of Ethics</a> close to heart in this work. 
-        These principles emphasize protecting society, acting with honesty and diligence, 
-        delivering competent service, and advancing the cybersecurity profession for the future.
-      </p>
-      <p class="text-armadilloBlack leading-relaxed">
-        For my clients, this means every engagement is conducted with transparency, responsibility, and 
-        a commitment to solutions that put their security and trust first.
-      </p>
-    </section>
-
-    <!-- Values -->
-    <section class="grid gap-8 md:grid-cols-3 text-center">
-      <div class="bg-white p-8 rounded-lg shadow-lg">
-        <h3 class="text-xl font-bold text-oliveGreen mb-2">Integrity</h3>
-        <p class="text-armadilloBlack text-sm">Honest, ethical guidance in every engagement.</p>
-      </div>
-      <div class="bg-white p-8 rounded-lg shadow-lg">
-        <h3 class="text-xl font-bold text-oliveGreen mb-2">Discipline</h3>
-        <p class="text-armadilloBlack text-sm">A veteran’s focus on detail and thoroughness.</p>
-      </div>
-      <div class="bg-white p-8 rounded-lg shadow-lg">
-        <h3 class="text-xl font-bold text-oliveGreen mb-2">Resilience</h3>
-        <p class="text-armadilloBlack text-sm">Helping your business prepare, withstand, and recover from threats.</p>
-      </div>
-    </section>
-
-    <!-- Call to Action -->
-    <section class="bg-armadilloBlack py-12 text-center rounded-lg shadow-lg">
-      <h2 class="text-2xl font-bold text-offWhite mb-4">Ready to Secure Your Business?</h2>
-      <p class="text-offWhite max-w-xl mx-auto mb-6">
-        Iron Dillo Cybersecurity is here to provide straightforward, hands-on support for Texas
-        individuals and businesses. Let’s talk about the right plan for your needs.
-      </p>
-      <a href="/contact.html" class="bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-lg transition">
-        Contact Me Today
-      </a>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
-    <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
-
-    <!-- Social Icons -->
-    <div class="inline-flex justify-center space-x-10 mb-8">
-      <!-- GitHub -->
-      <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12 .297c-6.63 0-12 5.373-12 12
-            0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577
-            0-.285-.01-1.04-.016-2.04-3.338.726-4.042-1.61-4.042-1.61
-            -.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729
-            1.205.084 1.84 1.236 1.84 1.236 1.07 1.835 2.809 1.304
-            3.495.997.108-.775.419-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.93
-            0-1.31.469-2.38 1.236-3.22-.124-.303-.536-1.527.117-3.176
-            0 0 1.008-.322 3.3 1.23.957-.266 1.983-.399 3.003-.404
-            1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23
-            3.297-1.23.655 1.649.243 2.873.119 3.176.77.84
-            1.236 1.91 1.236 3.22 0 4.61-2.807 5.625-5.479 5.921
-            .43.372.823 1.102.823 2.222 0 1.606-.015 2.896-.015 3.286
-            0 .319.216.694.825.576C20.565 22.092 24 17.592 24 12.297
-            24 5.373 18.627.297 12 .297z"/>
-        </svg>
-      </a>
-
-      <!-- Facebook -->
-      <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0
-            23.4.6 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413
-            c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099
-            2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796
-            1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116
-            C23.4 24 24 23.4 24 22.675V1.342C24
-            .6 23.4 0 22.675 0z"/>
-        </svg>
-      </a>
-
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/company/iron-dillo/" target="_blank" aria-label="LinkedIn"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037
-            -1.854 0-2.137 1.445-2.137 2.939v5.667H9.351V9h3.414v1.561h.049
-            c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.37
-            4.271 5.452v6.291zM5.337 7.433c-1.144
-            0-2.07-.927-2.07-2.07 0-1.144.926-2.07
-            2.07-2.07 1.143 0 2.07.926
-            2.07 2.07 0 1.143-.927 2.07-2.07
-            2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225
-            0H1.771C.792 0 0 .792 0 1.77v20.451C0
-            23.207.792 24 1.77 24h20.451C23.208 24
-            24 23.207 24 22.222V1.77C24 .792 23.208
-            0 22.225 0z"/>
-        </svg>
-      </a>
-    </div>
-
-    <div class="flex flex-col md:flex-row items-center justify-center gap-6 mb-8 text-sm sm:text-base">
-      <div class="text-center md:text-left">
-        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Phone</p>
-        <a href="tel:19039331342" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
-          (903) 933-1342
-        </a>
-      </div>
-      <span class="hidden md:inline-flex h-10 border-l border-offWhite/20"></span>
-      <div class="text-center md:text-left">
-        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Email</p>
-        <a href="mailto:contact@irondillo.com" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
-          contact@irondillo.com
-        </a>
-      </div>
-    </div>
-
-    <p class="italic mb-4">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
-    <div class="space-x-4 mb-4">
-      <a href="/privacy.html" class="hover:underline">Privacy</a>
-      <a href="/terms.html" class="hover:underline">Terms</a>
-      <a href="/commitment.html" class="hover:underline">Our Commitment</a>
-    </div>
-    <p>&copy; 2025 Iron Dillo. All rights reserved.</p>
-  </footer>
-
 </body>
 </html>
