--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 
   <!-- Fonts & Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -40,218 +41,103 @@
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
   <link rel="icon" type="image/png" href="/assets/favicon.png" />
 </head>
-
-<body class="bg-offWhite text-armadilloGray min-h-screen flex flex-col font-inter">
-
-  <!-- Header -->
-  <header class="text-center pt-8 max-w-3xl mx-auto">
-    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
-  </header>
-
-  <!-- Navigation -->
-  <nav class="bg-armadilloBlack/95 rounded-full mb-6 w-full fade-in shadow-sm">
-    <div class="max-w-5xl mx-auto px-4">
-      <div class="flex justify-center gap-4 flex-wrap py-2">
-        <a href="/index.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
-        <a href="/services.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
-        <a href="/about.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
-        <a href="/contact.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter page-shell">
+  <div class="relative flex flex-col min-h-screen">
+    <header class="relative z-10 max-w-6xl mx-auto px-6 pt-8">
+      <div class="glass-panel nav-shell bg-armadilloBlack/90 rounded-2xl px-5 sm:px-8 py-4 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
+        <div class="flex items-center gap-4">
+          <img src="/assets/irondillo-preview.png" alt="Iron Dillo logo" class="w-14 h-14" />
+          <div>
+            <p class="pill">Contact</p>
+            <p class="text-offWhite font-semibold text-lg">Start the conversation</p>
+            <p class="text-sm text-offWhite/80">Austin-based. Texas focused.</p>
+          </div>
+        </div>
+        <nav class="flex flex-wrap items-center gap-3 text-sm">
+          <a href="/index.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Home</a>
+          <a href="/services.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Services</a>
+          <a href="/about.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">About</a>
+          <a href="/contact.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Contact</a>
+          <a href="tel:19039331342" class="btn-primary text-sm">Call now</a>
+        </nav>
       </div>
-    </div>
-  </nav>
+    </header>
 
-  <!-- Main Contact Form -->
-  <main class="flex-grow max-w-xl w-full bg-white rounded-lg p-8 shadow-lg mx-auto">
-    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6 text-center">Contact Iron Dillo</h1>
-    <p class="text-armadilloBlack mb-8 text-center">
-      Have a cybersecurity question? Want to schedule a consult? Fill out the form below and I’ll respond as soon as possible.
-    </p>
-    <p class="text-sm text-oliveGreen text-center mb-6">Austin-based availability with the flexibility to support clients across Texas.</p>
+    <main class="flex-grow max-w-6xl mx-auto px-6 py-10 space-y-10">
+      <section class="glass-panel rounded-3xl p-8 md:p-12 grid grid-cols-1 lg:grid-cols-3 gap-8 items-start">
+        <div class="lg:col-span-1 space-y-4">
+          <h1 class="text-4xl font-extrabold text-armadilloBlack">Let’s talk.</h1>
+          <p class="text-base text-armadilloGray leading-relaxed">Share what you’re seeing, what you need, and the timeline you’re working with. We’ll respond quickly with next steps and a clear plan.</p>
+          <div class="space-y-3">
+            <div class="hero-accent rounded-2xl p-4">
+              <p class="text-sm font-semibold text-armadilloBlack">Direct line</p>
+              <a href="tel:19039331342" class="block text-xl font-bold text-armadilloBlack hover:text-oliveGreen">(903) 933-1342</a>
+              <p class="text-xs text-armadilloGray">Call for immediate support or a quick consult.</p>
+            </div>
+            <div class="hero-accent rounded-2xl p-4">
+              <p class="text-sm font-semibold text-armadilloBlack">Email</p>
+              <a href="mailto:contact@irondillo.com" class="text-armadilloBlack font-semibold hover:text-oliveGreen">contact@irondillo.com</a>
+              <p class="text-xs text-armadilloGray">We typically respond the same business day.</p>
+            </div>
+          </div>
+        </div>
 
-    <div class="bg-offWhite border border-armadilloGray/30 rounded-lg p-6 mb-8 shadow-sm">
-      <p class="text-sm font-semibold tracking-wide uppercase text-armadilloGray">Direct Support</p>
-      <a href="tel:19039331342" class="text-2xl font-semibold text-armadilloBlack hover:text-oliveGreen block mt-2">
-        (903) 933-1342
-      </a>
-      <p class="text-armadilloGray mt-3">Call for immediate support or to discuss the right cybersecurity approach for your needs.</p>
-    </div>
+        <form class="lg:col-span-2 glass-panel rounded-2xl p-6 space-y-4" action="https://formspree.io/f/xnnqaevn" method="POST">
+          <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+            <div>
+              <label for="name" class="text-sm font-semibold text-armadilloBlack">Name</label>
+              <input required name="name" id="name" class="w-full mt-2 px-4 py-3 rounded-xl border border-armadilloGray/20 focus:outline-none focus:border-oliveGreen" />
+            </div>
+            <div>
+              <label for="email" class="text-sm font-semibold text-armadilloBlack">Email</label>
+              <input required type="email" name="email" id="email" class="w-full mt-2 px-4 py-3 rounded-xl border border-armadilloGray/20 focus:outline-none focus:border-oliveGreen" />
+            </div>
+            <div>
+              <label for="phone" class="text-sm font-semibold text-armadilloBlack">Phone</label>
+              <input name="phone" id="phone" class="w-full mt-2 px-4 py-3 rounded-xl border border-armadilloGray/20 focus:outline-none focus:border-oliveGreen" />
+            </div>
+            <div>
+              <label for="urgency" class="text-sm font-semibold text-armadilloBlack">Urgency</label>
+              <select name="urgency" id="urgency" class="w-full mt-2 px-4 py-3 rounded-xl border border-armadilloGray/20 focus:outline-none focus:border-oliveGreen">
+                <option>General question</option>
+                <option>Within 48 hours</option>
+                <option>Immediate</option>
+              </select>
+            </div>
+          </div>
+          <div>
+            <label for="message" class="text-sm font-semibold text-armadilloBlack">How can we help?</label>
+            <textarea required name="message" id="message" rows="5" class="w-full mt-2 px-4 py-3 rounded-xl border border-armadilloGray/20 focus:outline-none focus:border-oliveGreen"></textarea>
+          </div>
+          <div class="flex items-center justify-between flex-wrap gap-3">
+            <div class="g-recaptcha" data-sitekey="6LdwJ6clAAAAAH-SzwY1aUlmlLzQA1DajkpLS5o0"></div>
+            <button type="submit" class="btn-primary">Send message</button>
+          </div>
+        </form>
+      </section>
+    </main>
 
-    <div class="bg-white border border-armadilloGray/20 rounded-lg p-6 mb-8 shadow-sm">
-      <h2 class="text-xl font-semibold text-oliveGreen mb-3">Professional review details</h2>
-      <ul class="list-disc list-inside text-armadilloGray space-y-2 text-sm">
-        <li>Executive-ready summaries and remediation roadmaps available upon request.</li>
-        <li>Comfortable collaborating under NDA and aligning to formal statements of work.</li>
-        <li>Communication tailored for technical stakeholders and leadership audiences.</li>
-        <li>References, sample deliverables, and security approach documents ready for review.</li>
-      </ul>
-    </div>
-
-    <form
-      id="contact-form"
-      action="https://formspree.io/f/xldnbpdg"
-      method="POST"
-      class="space-y-6"
-      onsubmit="return onSubmit(event)"
-    >
-      <!-- Honeypot Field -->
-      <div style="display:none;">
-        <label for="gotcha">Leave this empty</label>
-        <input type="text" name="_gotcha" id="gotcha" autocomplete="off" />
+    <footer class="relative z-10 bg-armadilloBlack text-offWhite py-10 mt-auto">
+      <div class="max-w-6xl mx-auto px-6 footer-grid">
+        <div>
+          <p class="text-oliveGreen font-semibold mb-2">Iron Dillo Cybersecurity</p>
+          <p class="text-sm text-offWhite/80">Practical, trustworthy protection for Texas businesses and individuals.</p>
+        </div>
+        <div>
+          <p class="uppercase text-xs tracking-widest text-oliveGreen">Call or email</p>
+          <a href="tel:19039331342" class="block text-offWhite font-semibold">(903) 933-1342</a>
+          <a href="mailto:contact@irondillo.com" class="text-offWhite/80 hover:text-oliveGreen">contact@irondillo.com</a>
+        </div>
+        <div class="text-sm text-offWhite/80 space-y-2">
+          <p class="uppercase text-xs tracking-widest text-oliveGreen">Links</p>
+          <div class="flex flex-col gap-1">
+            <a href="/privacy.html" class="hover:text-oliveGreen">Privacy</a>
+            <a href="/terms.html" class="hover:text-oliveGreen">Terms</a>
+            <a href="/commitment.html" class="hover:text-oliveGreen">Our Commitment</a>
+          </div>
+        </div>
       </div>
-
-      <div>
-        <label for="name" class="block mb-2 font-semibold text-oliveGreen">Your Name</label>
-        <input
-          type="text"
-          name="name"
-          id="name"
-          required
-          class="w-full p-3 rounded bg-offWhite border border-armadilloGray text-armadilloBlack 
-                 focus:outline-none focus:ring-2 focus:ring-oliveGreen focus:border-oliveGreen"
-          placeholder="Jane Doe"
-          autocomplete="name"
-        />
-      </div>
-
-      <div>
-        <label for="email" class="block mb-2 font-semibold text-oliveGreen">Your Email</label>
-        <input
-          type="email"
-          name="_replyto"
-          id="email"
-          required
-          class="w-full p-3 rounded bg-offWhite border border-armadilloGray text-armadilloBlack 
-                 focus:outline-none focus:ring-2 focus:ring-oliveGreen focus:border-oliveGreen"
-          placeholder="you@example.com"
-          autocomplete="email"
-        />
-      </div>
-
-      <div>
-        <label for="message" class="block mb-2 font-semibold text-oliveGreen">Message</label>
-        <textarea
-          name="message"
-          id="message"
-          rows="5"
-          required
-          class="w-full p-3 rounded bg-offWhite border border-armadilloGray text-armadilloBlack 
-                 focus:outline-none focus:ring-2 focus:ring-oliveGreen focus:border-oliveGreen"
-          placeholder="Write your message here..."
-        ></textarea>
-      </div>
-
-      <!-- reCAPTCHA -->
-      <div class="g-recaptcha" data-sitekey="6LdCtosrAAAAAGddw60skAwbV91b2UmEAuLaSLYb"></div>
-
-      <!-- Optional Redirect -->
-      <input type="hidden" name="_next" value="/thank-you.html" />
-
-      <button
-        type="submit"
-        class="w-full mt-4 bg-oliveGreen hover:bg-oliveDark text-white font-bold py-3 rounded-lg shadow-md transition"
-      >
-        Send Message
-      </button>
-    </form>
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
-    <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
-
-    <!-- Social Icons -->
-    <div class="inline-flex justify-center space-x-10 mb-8">
-      <!-- GitHub -->
-      <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12 .297c-6.63 0-12 5.373-12 12
-            0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577
-            0-.285-.01-1.04-.016-2.04-3.338.726-4.042-1.61-4.042-1.61
-            -.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729
-            1.205.084 1.84 1.236 1.84 1.236 1.07 1.835 2.809 1.304
-            3.495.997.108-.775.419-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.93
-            0-1.31.469-2.38 1.236-3.22-.124-.303-.536-1.527.117-3.176
-            0 0 1.008-.322 3.3 1.23.957-.266 1.983-.399 3.003-.404
-            1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23
-            3.297-1.23.655 1.649.243 2.873.119 3.176.77.84
-            1.236 1.91 1.236 3.22 0 4.61-2.807 5.625-5.479 5.921
-            .43.372.823 1.102.823 2.222 0 1.606-.015 2.896-.015 3.286
-            0 .319.216.694.825.576C20.565 22.092 24 17.592 24 12.297
-            24 5.373 18.627.297 12 .297z"/>
-        </svg>
-      </a>
-
-      <!-- Facebook -->
-      <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0
-            23.4.6 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413
-            c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099
-            2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796
-            1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116
-            C23.4 24 24 23.4 24 22.675V1.342C24
-            .6 23.4 0 22.675 0z"/>
-        </svg>
-      </a>
-
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/company/iron-dillo/" target="_blank" aria-label="LinkedIn"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037
-            -1.854 0-2.137 1.445-2.137 2.939v5.667H9.351V9h3.414v1.561h.049
-            c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.37
-            4.271 5.452v6.291zM5.337 7.433c-1.144
-            0-2.07-.927-2.07-2.07 0-1.144.926-2.07
-            2.07-2.07 1.143 0 2.07.926
-            2.07 2.07 0 1.143-.927 2.07-2.07
-            2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225
-            0H1.771C.792 0 0 .792 0 1.77v20.451C0
-            23.207.792 24 1.77 24h20.451C23.208 24
-            24 23.207 24 22.222V1.77C24 .792 23.208
-            0 22.225 0z"/>
-        </svg>
-      </a>
-    </div>
-
-    <div class="flex flex-col md:flex-row items-center justify-center gap-6 mb-8 text-sm sm:text-base">
-      <div class="text-center md:text-left">
-        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Phone</p>
-        <a href="tel:19039331342" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
-          (903) 933-1342
-        </a>
-      </div>
-      <span class="hidden md:inline-flex h-10 border-l border-offWhite/20"></span>
-      <div class="text-center md:text-left">
-        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Email</p>
-        <a href="mailto:contact@irondillo.com" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
-          contact@irondillo.com
-        </a>
-      </div>
-    </div>
-
-    <p class="italic mb-4">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
-    <div class="space-x-4 mb-4">
-      <a href="/privacy.html" class="hover:underline">Privacy</a>
-      <a href="/terms.html" class="hover:underline">Terms</a>
-      <a href="/commitment.html" class="hover:underline">Our Commitment</a>
-    </div>
-    <p>&copy; 2025 Iron Dillo. All rights reserved.</p>
-  </footer>
-
-  <script>
-    // Prevent form submit if reCAPTCHA not verified
-    function onSubmit(event) {
-      const recaptchaResponse = grecaptcha.getResponse();
-      if (recaptchaResponse.length === 0) {
-        alert("Please verify you are not a robot.");
-        event.preventDefault();
-        return false;
-      }
-      return true;
-    }
-  </script>
+    </footer>
+  </div>
 </body>
 </html>
