--- a/services.html
+++ b/services.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -42,196 +43,122 @@
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
   <link rel="icon" type="image/png" href="/assets/favicon.png" />
 </head>
-<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
-
-  <!-- Logo -->
-  <header class="text-center pt-6 max-w-3xl mx-auto fade-in">
-    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-3 w-28 h-auto" />
-  </header>
-
-  <!-- Navigation -->
-  
-  <nav class="bg-armadilloBlack/95 rounded-full mb-6 w-full fade-in shadow-sm">
-    <div class="max-w-4xl mx-auto px-4">
-      <div class="flex justify-center gap-3 flex-wrap py-2 text-xs tracking-wide">
-        <a href="/index.html" class="py-2 px-3 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
-        <a href="/services.html" class="py-2 px-3 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
-        <a href="/about.html" class="py-2 px-3 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
-        <a href="/contact.html" class="py-2 px-3 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+<body class="flex flex-col min-h-screen text-armadilloGray font-inter page-shell">
+  <div class="relative flex flex-col min-h-screen">
+    <header class="relative z-10 max-w-6xl mx-auto px-6 pt-8 fade-in">
+      <div class="glass-panel nav-shell bg-armadilloBlack/90 rounded-2xl px-5 sm:px-8 py-4 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
+        <div class="flex items-center gap-4">
+          <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="w-14 h-14" />
+          <div>
+            <p class="pill">Services</p>
+            <p class="text-offWhite font-semibold text-lg">Mission-ready cybersecurity</p>
+            <p class="text-sm text-offWhite/80">Austin-based, serving Texas businesses</p>
+          </div>
+        </div>
+        <nav class="flex flex-wrap items-center gap-3 text-sm">
+          <a href="/index.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Home</a>
+          <a href="/services.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Services</a>
+          <a href="/about.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">About</a>
+          <a href="/contact.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Contact</a>
+          <a href="tel:19039331342" class="btn-primary text-sm">Call now</a>
+        </nav>
       </div>
-    </div>
-  </nav>
+    </header>
 
-  <!-- Page Title -->
-  <section class="text-center mb-8 fade-in">
-    <h1 class="text-4xl font-extrabold text-oliveGreen">Our Services</h1>
-    <p class="text-armadilloGray mt-2 text-base">Practical, veteran-owned cybersecurity solutions for Texas businesses and individuals.</p>
-    <p class="text-xs text-oliveGreen mt-2 tracking-widest uppercase">Austin-based expertise with boots-on-the-ground commitment.</p>
-  </section>
+    <main class="flex-grow max-w-6xl mx-auto px-6 py-10 space-y-10 fade-in">
+      <section class="glass-panel rounded-3xl p-8 md:p-12 flex flex-col md:flex-row gap-8 items-start">
+        <div class="flex-1 space-y-4">
+          <h1 class="text-4xl font-extrabold text-armadilloBlack">Our Services</h1>
+          <p class="text-base text-armadilloGray leading-relaxed">Practical, veteran-owned cybersecurity solutions for Texas businesses and individuals. Everything we deliver is built for clarity, speed, and executive-ready decisions.</p>
+          <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
+            <div class="hero-accent rounded-2xl p-4">
+              <p class="text-sm font-semibold text-armadilloBlack">Rapid discovery</p>
+              <p class="text-xs text-armadilloGray">Understand risk and priority in days.</p>
+            </div>
+            <div class="hero-accent rounded-2xl p-4">
+              <p class="text-sm font-semibold text-armadilloBlack">Clear next steps</p>
+              <p class="text-xs text-armadilloGray">Plain-English guidance for leaders.</p>
+            </div>
+            <div class="hero-accent rounded-2xl p-4">
+              <p class="text-sm font-semibold text-armadilloBlack">Hands-on help</p>
+              <p class="text-xs text-armadilloGray">Support through implementation.</p>
+            </div>
+          </div>
+        </div>
+        <div class="glass-panel rounded-2xl p-6 w-full md:w-80">
+          <p class="text-xs tracking-[0.2em] uppercase text-armadilloGray">Direct support</p>
+          <a href="tel:19039331342" class="block text-2xl font-bold text-armadilloBlack mt-2 hover:text-oliveGreen">(903) 933-1342</a>
+          <p class="text-sm text-armadilloGray mt-3">Call to discuss your current security posture or schedule an assessment window.</p>
+          <a class="btn-link mt-4 inline-block" href="mailto:contact@irondillo.com">Email us</a>
+        </div>
+      </section>
 
-  <!-- Services Grid -->
-  <main class="flex-grow max-w-4xl mx-auto px-6 py-6 grid gap-7 md:grid-cols-2 fade-in">
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Security Consultations & Risk Assessments</h2>
-      <p class="text-armadilloBlack leading-relaxed">Identify vulnerabilities, understand risks, and receive actionable recommendations in plain English.</p>
-    </section>
-
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Cybersecurity Policy & Documentation</h2>
-      <p class="text-armadilloBlack leading-relaxed">Develop custom policies, SOPs, and incident response plans designed for your operations.</p>
-    </section>
-
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Website & Web Presence Security Audits</h2>
-      <p class="text-armadilloBlack leading-relaxed">Audit websites, forms, and public content for vulnerabilities like XSS, misconfigurations, and more.</p>
-    </section>
-
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Personal & Small Business Security Training</h2>
-      <p class="text-armadilloBlack leading-relaxed">One-on-one or group training on phishing, password safety, and operational security basics.</p>
-    </section>
-
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Incident Response Guidance</h2>
-      <p class="text-armadilloBlack leading-relaxed">Step-by-step guidance during incidents to contain threats, minimize damage, and restore security.</p>
-    </section>
-
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Vulnerability Scanning & Reporting</h2>
-      <p class="text-armadilloBlack leading-relaxed">Comprehensive scans with actionable reports highlighting weaknesses and recommended fixes.</p>
-    </section>
-
-    <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Secure Configuration</h2>
-      <p class="text-armadilloBlack leading-relaxed">Ensure devices, routers, and networks follow security best practices to reduce risks.</p>
-    </section>
-  </main>
-
-  <!-- Modern Security Practices -->
-  <section class="bg-white shadow-inner py-10 px-6 mt-4 fade-in">
-    <div class="max-w-5xl mx-auto text-center">
-      <p class="uppercase tracking-[0.3em] text-xs text-oliveGreen mb-2">Modern best practices</p>
-      <h2 class="text-3xl font-bold text-armadilloBlack mb-3">Security that keeps pace with today’s threats</h2>
-      <p class="text-base text-armadilloGray mb-7">
-        Every engagement follows current guidance from the CIS Controls, NIST CSF, and Zero Trust architecture principles. That means layered defenses, verified trust, and constant validation so your business stays resilient.
-      </p>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 text-left">
-        <article class="border border-oliveGreen/30 rounded-2xl p-5 h-full bg-offWhite">
-          <h3 class="text-lg font-semibold text-oliveGreen mb-2">Zero Trust Access</h3>
-          <p class="text-sm leading-relaxed">Enforce least-privilege permissions, continuous verification, and network segmentation to minimize blast radius.</p>
+      <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <article class="glass-panel rounded-2xl p-8 space-y-3">
+          <p class="pill w-fit">Assessment</p>
+          <h2 class="text-2xl font-semibold text-armadilloBlack">Security Consultations & Risk Assessments</h2>
+          <p class="text-armadilloGray leading-relaxed">Identify vulnerabilities, understand risks, and receive prioritized recommendations in plain English.</p>
         </article>
-        <article class="border border-oliveGreen/30 rounded-2xl p-5 h-full bg-offWhite">
-          <h3 class="text-lg font-semibold text-oliveGreen mb-2">MFA &amp; Password Hygiene</h3>
-          <p class="text-sm leading-relaxed">Pair phishing-resistant MFA with credential monitoring, password managers, and dark web checks for early warnings.</p>
+        <article class="glass-panel rounded-2xl p-8 space-y-3">
+          <p class="pill w-fit">Documentation</p>
+          <h2 class="text-2xl font-semibold text-armadilloBlack">Cybersecurity Policy & Documentation</h2>
+          <p class="text-armadilloGray leading-relaxed">Create and refine policies, procedures, and visuals that align with your regulators and leadership.</p>
         </article>
-        <article class="border border-oliveGreen/30 rounded-2xl p-5 h-full bg-offWhite">
-          <h3 class="text-lg font-semibold text-oliveGreen mb-2">Endpoint Detection &amp; Response</h3>
-          <p class="text-sm leading-relaxed">Deploy EDR tooling, harden configurations, and automate patching across laptops, servers, and OT assets.</p>
+        <article class="glass-panel rounded-2xl p-8 space-y-3">
+          <p class="pill w-fit">Guidance</p>
+          <h2 class="text-2xl font-semibold text-armadilloBlack">Remote Support & Hands-On Advice</h2>
+          <p class="text-armadilloGray leading-relaxed">Step-by-step guidance to implement fixes without slowing down your team.</p>
         </article>
-        <article class="border border-oliveGreen/30 rounded-2xl p-5 h-full bg-offWhite">
-          <h3 class="text-lg font-semibold text-oliveGreen mb-2">Secure Backups &amp; Recovery</h3>
-          <p class="text-sm leading-relaxed">Maintain immutable, geo-separated backups with rehearsed tabletop exercises for ransomware-ready response.</p>
+        <article class="glass-panel rounded-2xl p-8 space-y-3">
+          <p class="pill w-fit">Training</p>
+          <h2 class="text-2xl font-semibold text-armadilloBlack">Executive & Staff Awareness</h2>
+          <p class="text-armadilloGray leading-relaxed">Concise training that shows teams what to watch for and how to respond.</p>
         </article>
+      </section>
+
+      <section class="glass-panel rounded-3xl p-8 space-y-4">
+        <div class="section-heading space-y-1">
+          <h2 class="text-2xl font-bold text-armadilloBlack">How we work</h2>
+          <p class="text-sm text-armadilloGray">Built for accountability and speed.</p>
+        </div>
+        <div class="timeline space-y-5">
+          <div class="timeline-step">
+            <h3 class="font-semibold text-armadilloBlack">Discovery</h3>
+            <p class="text-sm text-armadilloGray">Capture context, assets, and goals to focus on what matters most.</p>
+          </div>
+          <div class="timeline-step">
+            <h3 class="font-semibold text-armadilloBlack">Action plan</h3>
+            <p class="text-sm text-armadilloGray">Deliver executive-ready recommendations with ownership, timelines, and risk impact.</p>
+          </div>
+          <div class="timeline-step">
+            <h3 class="font-semibold text-armadilloBlack">Implementation</h3>
+            <p class="text-sm text-armadilloGray">Guide your team through remediation and validate progress.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="relative z-10 bg-armadilloBlack text-offWhite py-10 mt-auto">
+      <div class="max-w-6xl mx-auto px-6 footer-grid">
+        <div>
+          <p class="text-oliveGreen font-semibold mb-2">Iron Dillo Cybersecurity</p>
+          <p class="text-sm text-offWhite/80">Practical, trustworthy protection for Texas individuals, small businesses, and rural operations.</p>
+        </div>
+        <div>
+          <p class="uppercase text-xs tracking-widest text-oliveGreen">Connect</p>
+          <a href="tel:19039331342" class="block text-offWhite font-semibold">(903) 933-1342</a>
+          <a href="mailto:contact@irondillo.com" class="text-offWhite/80 hover:text-oliveGreen">contact@irondillo.com</a>
+        </div>
+        <div class="text-sm text-offWhite/80 space-y-2">
+          <p class="uppercase text-xs tracking-widest text-oliveGreen">Legal</p>
+          <div class="flex flex-col gap-1">
+            <a href="/privacy.html" class="hover:text-oliveGreen">Privacy</a>
+            <a href="/terms.html" class="hover:text-oliveGreen">Terms</a>
+            <a href="/commitment.html" class="hover:text-oliveGreen">Our Commitment</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
-
-  <!-- CTA Section -->
-  <section class="text-center mt-12 max-w-2xl mx-auto fade-in">
-    <p class="text-armadilloGray font-semibold mb-4">
-      Need more advanced support? From detailed risk assessments to full remediation,
-      pricing is customized to fit your needs.
-    </p>
-    <a href="/contact.html" class="bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-lg">
-      Contact Me for a Free Consultation
-    </a>
-  </section>
-  
-  <!-- Footer -->
-  <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
-    <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
-
-    <!-- Social Icons -->
-    <div class="inline-flex justify-center space-x-10 mb-8">
-      <!-- GitHub -->
-      <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12 .297c-6.63 0-12 5.373-12 12
-            0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577
-            0-.285-.01-1.04-.016-2.04-3.338.726-4.042-1.61-4.042-1.61
-            -.546-1.387-1.333-1.757-1.333-1.757-1.089-.745.084-.729.084-.729
-            1.205.084 1.84 1.236 1.84 1.236 1.07 1.835 2.809 1.304
-            3.495.997.108-.775.419-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.93
-            0-1.31.469-2.38 1.236-3.22-.124-.303-.536-1.527.117-3.176
-            0 0 1.008-.322 3.3 1.23.957-.266 1.983-.399 3.003-.404
-            1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23
-            3.297-1.23.655 1.649.243 2.873.119 3.176.77.84
-            1.236 1.91 1.236 3.22 0 4.61-2.807 5.625-5.479 5.921
-            .43.372.823 1.102.823 2.222 0 1.606-.015 2.896-.015 3.286
-            0 .319.216.694.825.576C20.565 22.092 24 17.592 24 12.297
-            24 5.373 18.627.297 12 .297z"/>
-        </svg>
-      </a>
-
-      <!-- Facebook -->
-      <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0
-            23.4.6 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413
-            c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099
-            2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796
-            1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116
-            C23.4 24 24 23.4 24 22.675V1.342C24
-            .6 23.4 0 22.675 0z"/>
-        </svg>
-      </a>
-
-      <!-- LinkedIn -->
-      <a href="https://www.linkedin.com/company/iron-dillo/" target="_blank" aria-label="LinkedIn"
-         class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037
-            -1.854 0-2.137 1.445-2.137 2.939v5.667H9.351V9h3.414v1.561h.049
-            c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.37
-            4.271 5.452v6.291zM5.337 7.433c-1.144
-            0-2.07-.927-2.07-2.07 0-1.144.926-2.07
-            2.07-2.07 1.143 0 2.07.926
-            2.07 2.07 0 1.143-.927 2.07-2.07
-            2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225
-            0H1.771C.792 0 0 .792 0 1.77v20.451C0
-            23.207.792 24 1.77 24h20.451C23.208 24
-            24 23.207 24 22.222V1.77C24 .792 23.208
-            0 22.225 0z"/>
-        </svg>
-      </a>
-    </div>
-
-    <div class="flex flex-col md:flex-row items-center justify-center gap-6 mb-8 text-sm sm:text-base">
-      <div class="text-center md:text-left">
-        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Phone</p>
-        <a href="tel:19039331342" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
-          (903) 933-1342
-        </a>
-      </div>
-      <span class="hidden md:inline-flex h-10 border-l border-offWhite/20"></span>
-      <div class="text-center md:text-left">
-        <p class="uppercase text-xs tracking-widest text-oliveGreen mb-1">Email</p>
-        <a href="mailto:contact@irondillo.com" class="text-offWhite text-lg font-semibold hover:text-oliveGreen transition">
-          contact@irondillo.com
-        </a>
-      </div>
-    </div>
-
-    <p class="italic mb-4">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
-    <div class="space-x-4 mb-4">
-      <a href="/privacy.html" class="hover:underline">Privacy</a>
-      <a href="/terms.html" class="hover:underline">Terms</a>
-      <a href="/commitment.html" class="hover:underline">Our Commitment</a>
-    </div>
-    <p>&copy; 2025 Iron Dillo. All rights reserved.</p>
-  </footer>
-
+    </footer>
+  </div>
 </body>
 </html>
